# check-gits

./: .envrc  .gitignore  devenv.nix  flake.nix
app/: Cargo.toml
app/src/: main.rs
