[package]
name = "git-unite"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0"
git2 = { version = "0.19.0", features = ["vendored-libgit2"] }
